--- a/src/main/resources/templates/verified.html
+++ b/src/main/resources/templates/verified.html
@@ -2,29 +2,41 @@
 <head>
   <title>Account Verified</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
     .text_container {
-      margin-left: auto;
-      margin-right: auto;
-      align-self: center;
-      text-transform: uppercase;
-      color: #c8ffff;
-      width: auto;
-      height: auto;
       background: #00000094;
+      color: #c8ffff;
       padding: 10px;
       text-align: center;
-      font: bold 46px/68px "Comic Sans MS", Sans-Serif;
-      align-content: center;
-    }
-    .text_with_bg {
-      width: 100%;
-      height: 100%;
-      background: url('https://i.pinimg.com/originals/8d/05/fa/8d05fa9a81445d3bb1678c52bff5c97e.jpg') no-repeat center center;
-      display: flex;
-      position: center;
+      text-transform: uppercase;
+      font-family: "Comic Sans MS", Sans-Serif;
+      font-size: 46px;
+      font-weight: bold;
     }
     .background {
-      background-color: #1A1E1F;
+      padding: 0 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #1a1e1f;
+      background-image: url("https://i.pinimg.com/originals/8d/05/fa/8d05fa9a81445d3bb1678c52bff5c97e.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100%;
+    }
+    @media (max-width: 1024px) {
+      .text_container {
+        font-size: 38px;
+      }
+    }
+    @media (max-width: 425px) {
+      .text_container {
+        font-size: 28px;
+      }
     }
   </style>
 </head>
